# openbox-sdk-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/instructions/: openbox-sdk-python.instructions.md
.github/workflows/: ci.yml  publish.yml
_notes/: INDEX.md  arch-httpx-body-capture-send-patch.md  decision-flat-hook-span-contract.md  decision-redis-mongo-urllib-coverage.md
openbox_core/: __init__.py  approvals.py  client.py  config.py  context.py  errors.py  gate.py  identity.py  runtime.py  sdk_version.py  serialization.py
openbox_core/adapters/: __init__.py  base.py
openbox_core/conformance/: __init__.py  fake_core.py  hook_preflight.py  instrumentation.py
openbox_core/contracts/: __init__.py  context.py  events.py  otel_spans.py  results.py
openbox_core/hooks/: __init__.py  events.py  preflight.py  wrappers.py
openbox_core/instrumentation/: __init__.py  db.py  file.py  function.py  http.py  llm.py  manager.py  shared.py
openbox_core/otel/: __init__.py  propagation.py  provider.py  setup.py  span_processor.py  trace_context.py
openbox_core/validation/: __init__.py  diagnostics.py  event_rules.py  registry.py  span_normalization.py
openbox_core/wire/: __init__.py  core_span.py  evaluate_payload.py
plans/reports/: implementation-260703-0217-base-sdk-flat-span-parity-report.md
tests/: test_import_safety.py  test_sdk_version.py
tests/client/: test_approval_poll.py  test_fail_modes.py
tests/config/: test_resolution_order.py
tests/conformance/: test_required_cases.py
tests/context/: test_bind_reset.py  test_trace_key.py
tests/contracts/: test_approval_parsing.py  test_event_classify.py  test_patch.py  test_result_parsing.py  test_retry_plan.py
tests/gate/: test_diagnostics.py  test_strict_failures.py
tests/instrumentation/: conftest.py  instrumented_env.py  test_db_block.py  test_db_redis_mongo.py  test_file_function_block.py  test_hook_failclosed_and_sync_approval.py  test_hook_runtime.py  test_http_preflight_block.py  test_http_urllib.py  test_manager_and_otel_lifecycle.py
tests/runtime/: test_runtime_delegation.py
tests/signing/: generate_golden_fixture_from_temporal_signer.py  golden_temporal_signed_request.json  test_golden_signing.py
tests/wire/: span_fixtures.py  test_backend_compat.py  test_core_span_projection.py  test_flat_hook_contract.py  test_hex_ids.py
tests/wire/go_spandata_compat/: go.mod  main.go
