[project]
name = "openbox-sdk-python"
version = "1.0.0"
description = "OpenBox base SDK - governance contracts, strict gate, identity/signing, evaluate client, context runtime, OTel span wire serialization, and generic instrumentation shared by every OpenBox framework SDK"
authors = [
    { name = "OpenBox Team", email = "tino@openbox.ai" },
]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
keywords = ["governance", "observability", "opentelemetry", "sdk", "openbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
# httpx/cryptography are required (client/identity are core features) but are
# lazy-imported inside their modules — never at openbox_core import time.
dependencies = [
    "opentelemetry-api>=1.38.0,<1.40.0",
    "opentelemetry-sdk>=1.38.0,<1.40.0",
    "httpx>=0.28.0,<1",
    "cryptography>=43,<47",
]

[project.optional-dependencies]
# HTTP instrumentation targets (installed only when the host app opts in).
http = [
    "requests>=2.31.0",
    "opentelemetry-instrumentation-requests>=0.59b0,<0.61b0",
    "opentelemetry-instrumentation-httpx>=0.59b0,<0.61b0",
    "opentelemetry-instrumentation-urllib3>=0.59b0,<0.61b0",
    "opentelemetry-instrumentation-urllib>=0.59b0,<0.61b0",
]
# DB instrumentation targets.
db = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pymongo>=4.6.0",
    "wrapt>=1.16.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.59b0,<0.61b0",
    "opentelemetry-instrumentation-dbapi>=0.59b0,<0.61b0",
    "opentelemetry-instrumentation-asyncpg>=0.59b0,<0.61b0",
    "opentelemetry-instrumentation-redis>=0.59b0,<0.61b0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.26.0,<0.27",
    "ruff>=0.8.0",
    "mypy>=1.16.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openbox_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E501: line length is advisory. UP042: (str, Enum) is deliberate — StrEnum
# changes str(member) semantics, and wire enums rely on plain string behavior.
ignore = ["E501", "UP042"]
